--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,3 +4,6 @@
     padding: 0;
     border: 0;
 }
+
+
+body { background-color: black; display: flex; align-items: center; justify-content: center; height: 100vh; }
